testdata/golden/k8s-microservices/deploy/prod/checkout.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: checkout
  template:
    metadata:
      labels:
        app: checkout
    spec:
      containers:
        - name: checkout
          image: ghcr.io/acme/checkout:2.0.1
          ports:
            - containerPort: 8080
          env:
            - name: DATABASE_URL
              value: postgres://checkout:s3cr3t@orders-db:5432/orders
            - name: ORDER_QUEUE_URL
              value: amqp://broker:5672
            - name: STRIPE_API_URL
              value: https://api.stripe.com
---
apiVersion: v1
kind: Service
metadata:
  name: checkout
  namespace: prod
spec:
  selector:
    app: checkout
  ports:
    - port: 8080
